# blotgl

./: .gitignore  CMakeLists.txt  Makefile  README.md  dependencies.sh  flake.nix
apps/: CMakeLists.txt
apps/blueflame/: CMakeLists.txt  app.hpp  main.cpp
apps/colorwheel/: app.hpp
apps/redflame/: CMakeLists.txt  app.hpp  fragment.glsl
apps/vortex/: CMakeLists.txt  app.hpp  fragment.glsl
cmake/: CheckLibCppHeaders.cmake  PickCompiler.cmake  SetupDependencies.cmake
gifs/: GIF.md
lib/: CMakeLists.txt  blotgl_app.cpp  blotgl_app.hpp  blotgl_color.hpp  blotgl_frame.hpp  blotgl_glerror.cpp  blotgl_glerror.hpp  blotgl_mmapped_file.hpp  blotgl_shader.hpp  blotgl_terminal.hpp  blotgl_utils.hpp
src/: CMakeLists.txt  blotgl_app.hpp  blotgl_braille.hpp  blotgl_color.hpp  blotgl_frame.hpp  blotgl_main.cpp  blotgl_utils.hpp  core_app.hpp
src/colorwheel/: CMakeLists.txt  app.hpp  main.cpp
